# paper2product

./: AGENTS.md  GEMINI.md  README.md
.letta/: settings.json
cli/: .env.example  README.md  comparison_2506_10943.md  main.py  pyproject.toml
cli/paper2product/: __init__.py  apodex.py  backend.py  cli.py  compete.py  feedback.py  ingestion.py  models.py  paper_search.py  pipeline.py  prompts.py  reporting.py  service.py  service_store.py  sources.py  trending.py
cli/tests/: test_backend.py  test_compete.py  test_paper_search.py  test_pipeline.py  test_reporting.py  test_research.py  test_service_store.py  test_spawn_agent.py
