[project]
name = "paper2product"
version = "0.1.0"
description = "Transform research papers into company/product opportunity reports with a multi-agent adversarial pipeline."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Ash-Blanc", email = "angelash18092007@gmail.com" }
]
license = { text = "MIT" }
keywords = ["arxiv", "ai", "agents", "startup", "product", "research", "apodex", "deep-research", "doi", "biorxiv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "arxiv",
    "fastapi",
    "httpx",
    "pdfplumber",
    "pydantic",
    "pyfiglet",
    "python-dotenv",
    "symbolica-agentica",
    "uvicorn",
    "cli2",
    "rich",
]

[project.scripts]
paper2product = "paper2product.cli:main"

[project.urls]
Repository = "https://github.com/Ash-Blanc/paper2product"
Issues = "https://github.com/Ash-Blanc/paper2product/issues"

[tool.uv]
package = true

[tool.setuptools]
packages = ["paper2product"]
